--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "object-assign": "4.1.0",
     "pmvc": "1.3.1",
     "react": "15.3.2",
     "react-dom": "15.3.2"
