--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "core-decorators": "0.13.0",
     "object-assign": "4.1.0",
     "pmvc": "1.4.0",
     "react": "15.3.2",
