--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "homepage": "https://soenkekluth.github.io/pmvc-react",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.6.1"
+    "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "core-decorators": "0.13.0",
+    "core-decorators": "0.14.0",
+    "hoist-non-react-statics": "1.2.0",
+    "invariant": "2.2.1",
+    "lodash": "4.16.4",
     "object-assign": "4.1.0",
     "pmvc": "1.4.0",
     "react": "15.3.2",
